--- a/6/index.html
+++ b/6/index.html
@@ -4,17 +4,16 @@
     <meta charset="utf-8">
     <style>
 
-     text {
-         font: 10px sans-serif;
-     }
-
      text.title {
          font: 28px sans-serif;
      }
 
-
      text.subtitle {
          font: 18px sans-serif;
+     }
+
+     .axis text {
+         font: 12px sans-serif;
      }
 
      .axis path {
@@ -27,11 +26,28 @@
          shape-rendering: crispEdges;
      }
 
+     .d3-tip {
+         background: white;
+         font: 12px sans-serif;
+         padding: .6em;
+     }
+
+     .d3-tip span {
+         font-weight: bold;
+     }
+
+     .layer rect:hover {
+         stroke: black;
+         stroke-width: 2;
+         stroke-linejoin: miter;
+     }
+
     </style>
 </head>
 <body>
     <svg id="chart"></svg>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
+    <script src="d3tip.js"></script>
     <script src="greenhouse.js"></script>
-</body> 
+</body>
 </html>
